# inventario

./: .env  .gitignore  COMUNICACION_FRONTEND_BACKEND.md  ESTADO_COMUNICACION.md  ESTRUCTURA_GRAFICA.md  IMPLEMENTACION_COMPLETA.md  README.md  TRADUCCION_README.md  abrir_devtools.bat  angular.json  clean_database.js  debug_purchases.bat  iniciar_desktop_compilado.bat  iniciar_dev.bat  iniciar_una_consola.bat  package-lock.json  package.json  start_dev_actualizado.bat  start_dev_test.bat  test_compra_debug.js  test_comunicacion.js  test_comunicacion_actualizado.js  test_con_auth.js  test_hibrido.js  test_simple.js  test_simple_db.js  test_tauri_final.js  update_roles.js
distribucion_final/: README_USUARIO.md
src/: main.ts  (+2 more)
src-tauri/: .env.dev  .env.example  .env.production  .taurignore  Cargo.toml  README-DESARROLLO.md  errors.txt  start-dev-stable.ps1  tauri.conf.json
src-tauri/migrations/: 20240101000000_initial.sql  20240102000000_invoices.sql  20240103000000_user_roles.sql  20240104000000_add_user_name_to_movements.sql  20240105000000_add_purchase_id_to_delivery_reports.sql  20240106000000_add_product_unit_to_purchase_products.sql  20240107000000_fix_inventory_unit_price.sql  20240108000000_system_settings.sql  20240109000000_warehouses_table.sql  20240110000000_license_table.sql  20240201000000_multi_company.sql  20240202000000_fixed_assets.sql  20240204000000_add_month_to_depreciation.sql  20240301000000_placeholder.sql  20241201000000_add_company_id_to_reception_reports.sql
src-tauri/scripts/: start-app.bat  start-backend.js
src-tauri/src/: config.rs  database.rs  error.rs  lib.rs  main.rs
src-tauri/src/models/: auth.rs  company.rs  dashboard.rs  fixed_assets.rs  inventory.rs  invoices.rs  license.rs  mod.rs  movements.rs  purchases.rs  reports.rs  settings.rs
src-tauri/src/services/: auth.rs  companies.rs  dashboard.rs  fixed_assets.rs  inventory.rs  invoices.rs  license.rs  mod.rs  movements.rs  purchases.rs  purchases_debug.rs  reports.rs  settings.rs
src-tauri/src/utils/: helpers.rs
(+83 files in other folders)
