[package]
name = "inventario_desktop"
version = "2.0.0"
description = "Sistema de Gestión de Inventario Desktop"
authors = ["Tu Nombre"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77"
default-run = "inventario_desktop_app"

[lib]
name = "inventario_desktop"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "inventario_desktop_app"
path = "src/main.rs"

[[bin]]
name = "generate_license"
path = "src/bin/generate_license.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"

# Para operaciones de sistema de archivos
fs_extra = "1.3"
dirs = "5.0"
opener = "0.7"

# Para comunicación HTTP con tu backend Rust
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }

# Para fechas y horas
chrono = { version = "0.4", features = ["serde"] }

# Base de datos SQLite
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Autenticación y seguridad
jsonwebtoken = "9.0"
bcrypt = "0.15"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Validación
validator = { version = "0.18", features = ["derive"] }

# Manejo de errores
anyhow = "1.0"
thiserror = "1.0"

# Variables de entorno
dotenv = "0.15"

# Exportación de documentos
rust_xlsxwriter = "0.78"
printpdf = "0.7"

# Gráficos y visualización
plotters = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
